--- a/RemoveDGFPasswords/Properties/launchSettings.json
+++ b/RemoveDGFPasswords/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "RemoveDGFPasswords": {
-      "commandName": "Project",
-      "commandLineArgs": "TEST.DGF -o TEST_WP.DGF"
+      "commandName": "Project"
     }
   }
 }
